--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap");
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
 }
 
 html,
@@ -19,9 +14,11 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Noto Sans JP", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  line-height: 1.4;
 }
 
 * {
@@ -35,8 +32,94 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.table-container {
+  font-family: "Noto Sans JP", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 1rem;
+  position: fixed;
+  top: 55px;
+  left: 10px;
+  width: auto;
+  min-width: 480px;
+  max-width: 900px;
+  max-height: 260px;
+  padding: 10px;
+  overflow: auto;
+  z-index: 1000;
+  border-radius: 14px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+  background-color: var(--background);
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+@media (max-width: 500px) {
+  .table-container {
+    border-radius: 14px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    width: 100vw;
+    max-width: calc(100vw - 20px);
+    min-width: 0;
   }
+}
+
+.table-container::-webkit-scrollbar {
+  display: none;
+}
+
+.table-container h3 {
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+.table-container table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.table-container th {
+  background-color: #eee;
+  padding: 4px 8px;
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
+.table-container td {
+  padding: 4px 8px;
+  border: 1px solid #ddd;
+}
+
+.table-container th:first-child,
+.table-container td:first-child {
+  width: 115px;
+}
+
+.table-container tr:nth-child(even) {
+  background-color: #fafafa;
+}
+
+.table-container tr:nth-child(odd) {
+  background-color: #fff;
+}
+
+header {
+  text-align: center;
+  color: var(--foreground);
+  background-color: var(--background);
+  padding-top: 10px;
+  height: 45px;
+  font-size: 1.3rem;
+  line-height: 1.2;
+}
+
+footer {
+  text-align: center;
+  color: var(--foreground);
+  background-color: var(--background);
+  padding-top: 10px;
+  height: 35px;
+  font-size: 1rem;
+  line-height: 0.7;
 }
