adjust font-size

--- a/app/globals.css
+++ b/app/globals.css
@@ -37,10 +37,11 @@ a {
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
-  font-size: 1rem;
+  font-size: 0.8rem;
   position: fixed;
   top: 55px;
   left: 10px;
+  right: 10px;
   width: auto;
   min-width: 480px;
   max-width: 900px;
