--- a/app/globals.css
+++ b/app/globals.css
@@ -70,9 +70,39 @@ a {
   display: none;
 }
 
-.table-container h3 {
+.table-container h2 {
   font-weight: 700;
-  margin-bottom: 8px;
+  font-size: 1.1rem;
+  padding-bottom: 6px;
+  border-bottom: 2px solid #888;
+  margin-bottom: 6px;
+}
+
+.table-container h3 {
+  font-weight: 500;
+  font-size: 0.9rem;
+  margin-bottom: 6px;
+}
+
+.table-container h3.time {
+  position: relative;
+  padding-left: 38px;
+}
+
+.table-container h3.time::before {
+  content: "日時 ";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 30px;
+  text-align: center;
+  font-weight: 600;
+  color: #000;
+  border: #999 1px solid;
+}
+
+.table-container p {
+  color: #555;
 }
 
 .table-container table {
