--- a/app/globals.css
+++ b/app/globals.css
@@ -45,15 +45,13 @@ a {
   width: auto;
   min-width: 480px;
   max-width: 900px;
-  max-height: 260px;
+
   padding: 10px;
   overflow: auto;
   z-index: 1000;
   border-radius: 14px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
   background-color: var(--background);
-  -ms-overflow-style: none;
-  scrollbar-width: none;
 }
 
 @media (max-width: 500px) {
@@ -64,10 +62,6 @@ a {
     max-width: calc(100vw - 20px);
     min-width: 0;
   }
-}
-
-.table-container::-webkit-scrollbar {
-  display: none;
 }
 
 .table-container h2 {
@@ -165,4 +159,9 @@ footer {
   height: 35px;
   font-size: 1rem;
   line-height: 0.7;
+}
+
+.description-scroll {
+  max-height: 260px;
+  overflow-y: auto;
 }
