--- a/app/globals.css
+++ b/app/globals.css
@@ -45,7 +45,6 @@ a {
   width: auto;
   min-width: 480px;
   max-width: 900px;
-
   padding: 10px;
   overflow: auto;
   z-index: 1000;
@@ -155,13 +154,63 @@ footer {
   text-align: center;
   color: var(--foreground);
   background-color: var(--background);
-  padding-top: 10px;
+  padding-top: 7px;
   height: 35px;
   font-size: 1rem;
   line-height: 0.7;
 }
 
+.about-link {
+  font-family: "Noto Sans JP", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  background: none;
+  border: none;
+  text-decoration: underline;
+  cursor: pointer;
+  margin-right: 10px;
+  padding: 0;
+}
+
 .description-scroll {
   max-height: 260px;
   overflow-y: auto;
+}
+
+.floating-modal {
+  position: fixed;
+  bottom: 54px;
+  left: 10px;
+  right: 10px;
+  width: auto;
+  max-width: 750px;
+  background: #fff;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 0.8rem;
+  border-radius: 12px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+  z-index: 2000;
+  padding: 18px;
+}
+.floating-modal .about {
+  font-weight: 600;
+  font-size: 1rem;
+  margin-bottom: 8px;
+}
+.floating-modal p {
+  margin-top: 4px;
+  line-height: 1.4;
+}
+.floating-modal a {
+  text-decoration: underline;
+}
+.floating-modal-close {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+  background: none;
+  border: none;
+  font-size: 1.6rem;
+  cursor: pointer;
 }
