--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap");
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
 }
 
 html,
@@ -19,9 +14,11 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Noto Sans JP", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  line-height: 1.4;
 }
 
 * {
@@ -35,8 +32,185 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.table-container {
+  font-family: "Noto Sans JP", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 0.8rem;
+  position: fixed;
+  top: 55px;
+  left: 10px;
+  right: 10px;
+  width: auto;
+  min-width: 480px;
+  max-width: 900px;
+  padding: 10px;
+  overflow: auto;
+  z-index: 1000;
+  border-radius: 14px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+  background-color: var(--background);
+}
+
+@media (max-width: 500px) {
+  .table-container {
+    border-radius: 14px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    width: 100vw;
+    max-width: calc(100vw - 20px);
+    min-width: 0;
   }
+}
+
+.table-container h2 {
+  font-weight: 700;
+  font-size: 1.1rem;
+  padding: 2px 4px;
+  margin-bottom: 6px;
+  background: linear-gradient(to right, #000 0%, #444 65%, #fff 98%);
+  color: #fff;
+}
+
+.table-container h3 {
+  font-weight: 500;
+  font-size: 0.9rem;
+  margin-bottom: 6px;
+}
+
+.table-container h3.time {
+  position: relative;
+  padding-left: 38px;
+}
+
+.table-container h3.time::before {
+  content: "日時 ";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 30px;
+  text-align: center;
+  font-weight: 600;
+  color: #000;
+  border: #999 1px solid;
+}
+
+.table-container p {
+  color: #555;
+}
+
+.table-container table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.table-container th {
+  background-color: #eee;
+  padding: 4px 8px;
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
+.table-container td {
+  padding: 4px 8px;
+  border: 1px solid #ddd;
+}
+
+.table-container th:first-child,
+.table-container td:first-child {
+  max-width: 100px;
+  min-width: 70px;
+}
+
+.table-container th:nth-child(2),
+.table-container td:nth-child(2) {
+  min-width: 140px;
+}
+
+.table-container .mainStage th:first-child,
+.table-container .mainStage td:first-child {
+  width: 130px;
+}
+
+.table-container tr:nth-child(even) {
+  background-color: #fafafa;
+}
+
+.table-container tr:nth-child(odd) {
+  background-color: #fff;
+}
+
+header {
+  text-align: center;
+  color: var(--foreground);
+  background-color: var(--background);
+  padding-top: 10px;
+  height: 45px;
+  font-size: 1.3rem;
+  line-height: 1.2;
+}
+
+footer {
+  text-align: center;
+  color: var(--foreground);
+  background-color: var(--background);
+  padding-top: 7px;
+  height: 35px;
+  font-size: 1rem;
+  line-height: 0.7;
+}
+
+.about-link {
+  font-family: "Noto Sans JP", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  background: none;
+  border: none;
+  text-decoration: underline;
+  cursor: pointer;
+  margin-right: 10px;
+  padding: 0;
+}
+
+.description-scroll {
+  max-height: 260px;
+  overflow-y: auto;
+}
+
+.floating-modal {
+  position: fixed;
+  bottom: 54px;
+  left: 10px;
+  right: 10px;
+  width: auto;
+  max-width: 750px;
+  background: #fff;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 0.8rem;
+  border-radius: 12px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+  z-index: 2000;
+  padding: 18px;
+}
+.floating-modal .about {
+  font-weight: 600;
+  font-size: 1rem;
+  margin-bottom: 8px;
+}
+.floating-modal p {
+  margin-top: 4px;
+  line-height: 1.4;
+}
+.floating-modal a {
+  text-decoration: underline;
+}
+.floating-modal-close {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+  background: none;
+  border: none;
+  font-size: 1.6rem;
+  cursor: pointer;
 }
