--- a/app/globals.css
+++ b/app/globals.css
@@ -75,16 +75,17 @@ a {
 .table-container h3 {
   font-weight: 500;
   font-size: 0.9rem;
-  margin-bottom: 6px;
+  margin-bottom: 3px;
 }
 
-.table-container h3.time {
+.table-container h3.time,
+.table-container h3.op {
   position: relative;
   padding-left: 38px;
 }
 
-.table-container h3.time::before {
-  content: "日時 ";
+.table-container h3.time::before,
+.table-container h3.op::before {
   position: absolute;
   left: 0;
   top: 0;
@@ -93,6 +94,14 @@ a {
   font-weight: 600;
   color: #000;
   border: #999 1px solid;
+}
+
+.table-container h3.time::before {
+  content: "日時 ";
+}
+
+.table-container h3.op::before {
+  content: "運営 ";
 }
 
 .table-container p {
