--- a/app/globals.css
+++ b/app/globals.css
@@ -157,22 +157,24 @@ a {
 
 header {
   text-align: center;
-  color: var(--foreground);
-  background-color: var(--background);
-  padding-top: 10px;
+  color: #000;
+  background-color: #fff;
+  padding: 10px;
   height: 45px;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   line-height: 1.2;
+  border-bottom: #000 1px solid;
 }
 
 footer {
   text-align: center;
-  color: var(--foreground);
-  background-color: var(--background);
-  padding-top: 5px;
+  color: #000;
+  background-color: #fff;
+  padding: 5px;
   height: 30px;
   font-size: 0.9rem;
   line-height: 0.7;
+  border-top: #000 1px solid;
 }
 
 .about-link {
