--- a/app/globals.css
+++ b/app/globals.css
@@ -75,16 +75,19 @@ a {
 .table-container h3 {
   font-weight: 500;
   font-size: 0.9rem;
-  margin-bottom: 6px;
+  margin-bottom: 3px;
 }
 
+.table-container h3.op,
+.table-container h3.area,
 .table-container h3.time {
   position: relative;
   padding-left: 38px;
 }
 
+.table-container h3.op::before,
+.table-container h3.area::before,
 .table-container h3.time::before {
-  content: "日時 ";
   position: absolute;
   left: 0;
   top: 0;
@@ -93,6 +96,18 @@ a {
   font-weight: 600;
   color: #000;
   border: #999 1px solid;
+}
+
+.table-container h3.op::before {
+  content: "運営 ";
+}
+
+.table-container h3.area::before {
+  content: "場所 ";
+}
+
+.table-container h3.time::before {
+  content: "日時 ";
 }
 
 .table-container p {
@@ -142,28 +157,31 @@ a {
 
 header {
   text-align: center;
-  color: var(--foreground);
-  background-color: var(--background);
-  padding-top: 10px;
+  color: #000;
+  background-color: #fff;
+  padding: 10px;
   height: 45px;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   line-height: 1.2;
+  border-bottom: #000 1px solid;
 }
 
 footer {
   text-align: center;
-  color: var(--foreground);
-  background-color: var(--background);
-  padding-top: 7px;
-  height: 35px;
-  font-size: 1rem;
+  color: #000;
+  background-color: #fff;
+  padding: 5px;
+  height: 30px;
+  font-size: 0.9rem;
   line-height: 0.7;
+  border-top: #000 1px solid;
 }
 
 .about-link {
   font-family: "Noto Sans JP", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
+  font-size: 0.8rem;
   background: none;
   border: none;
   text-decoration: underline;
@@ -179,7 +197,7 @@ footer {
 
 .floating-modal {
   position: fixed;
-  bottom: 54px;
+  bottom: 45px;
   left: 10px;
   right: 10px;
   width: auto;
