--- a/app/globals.css
+++ b/app/globals.css
@@ -160,9 +160,9 @@ header {
   color: #000;
   background-color: #fff;
   padding: 10px;
-  height: 45px;
+  height: 40px;
   font-size: 1.2rem;
-  line-height: 1.2;
+  line-height: 0.9;
   border-bottom: #000 1px solid;
 }
 
@@ -170,11 +170,24 @@ footer {
   text-align: center;
   color: #000;
   background-color: #fff;
-  padding: 5px;
-  height: 30px;
+  padding: 4px;
+  height: 60px;
   font-size: 0.9rem;
-  line-height: 0.7;
+  line-height: 1.6;
   border-top: #000 1px solid;
+}
+
+input {
+  font-family: "Noto Sans JP", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-size: 0.9rem;
+  padding: 3px 6px;
+  border: 1px solid #aaa;
+  border-radius: 4px;
+  width: 96vw;
+  max-width: 600px;
+  box-sizing: border-box;
 }
 
 .about-link {
@@ -197,7 +210,7 @@ footer {
 
 .floating-modal {
   position: fixed;
-  bottom: 45px;
+  bottom: 75px;
   left: 10px;
   right: 10px;
   width: auto;
